# Cpp-training

./: README.md
Project-1/: CMakeLists.txt  CastAnalyzer.cpp  ReadMe.txt
Project-1/test_input/: more_casts.cpp  sample.cpp  templates.hpp
Project-2/: CMakeLists.txt  README.md  main.cpp
Project-2/include/: string_view.hpp
Project-3/: CMakeLists.txt  README.md  optional.hpp  test_optional.cpp
Project-4/: CMakeLists.txt  README.md  advanced_example.cpp  any.hpp  main.cpp
